Update text formatting and date range in about.html

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
     <div class="container">
         <div class="page-header">
             <h1>ABOUT</h1>
-            <p>Background, education, and achievements</p>
+            <p>BACKGROUND, EDUCATION, and ACHIEVEMENTS</p>
         </div>
 
         <!-- Education -->
@@ -149,7 +149,7 @@
             <div class="story-card">
                 <div class="story-meta">
                     <span class="story-company">Alpha Kappa Psi - Founding Member</span>
-                    <span class="story-date">January 2024 - Present</span>
+                    <span class="story-date">January 2024 - December 2025</span>
                 </div>
                 <div class="story-title">Technology Committee Chair</div>
                 <div class="story-content">
