Refactor achievement details for Trace Labs CTF
Updated achievement details to list individual placements.

--- a/about.html
+++ b/about.html
@@ -120,8 +120,9 @@
             <div class="achievements-grid">
                 <div class="achievement-card">
                     <div class="achievement-title">Trace Labs Search Party OSINT CTF</div>
-                    <div class="achievement-detail">Multiple top placements: 10th, 16th, and 25th place finishes</div>
-                    <div class="achievement-badge">TOP 25</div>
+                    <div class="achievement-badge">10th</div> 
+                    <div class="achievement-badge">16th</div> 
+                    <div class="achievement-badge">25th</div>
                 </div>
 
                 <div class="achievement-card">
