--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
             <div class="story-card">
                 <div class="story-meta">
                     <span class="story-company">The University of Tampa</span>
-                    <span class="story-date">Expected May 2026</span>
+                    <span class="story-date">Expected Graduation: May 2026</span>
                 </div>
                 <div class="story-title">B.S. in Business - Cybersecurity Major</div>
                 <div class="story-content">
@@ -120,6 +120,7 @@
             <div class="achievements-grid">
                 <div class="achievement-card">
                     <div class="achievement-title">Trace Labs Search Party OSINT CTF</div>
+                    <div class="achievement-detail">International missing person open source intelligence search Capture The Flag</div>
                     <div class="achievement-badge">10th</div> 
                     <div class="achievement-badge">16th</div> 
                     <div class="achievement-badge">25th</div>
@@ -127,14 +128,15 @@
 
                 <div class="achievement-card">
                     <div class="achievement-title">Swimmer CTF</div>
-                    <div class="achievement-detail">128th out of 688 competitors (January 2026)</div>
+                    <div class="achievement-detail">Internatial japanese geo-location based Capture The Flag</div>
+                    <div class="achievement-badge">>128th/688th</div>
                     <div class="achievement-badge">TOP 20%</div>
                 </div>
 
                 <div class="achievement-card">
                     <div class="achievement-title">Raymond James CTF</div>
-                    <div class="achievement-detail">October 2024 Participant</div>
-                    <div class="achievement-badge">PARTICIPANT</div>
+                    <div class="achievement-detail">Critical thinking and problem solving Capture The Flag</div>
+                    <div class="achievement-badge">14th</div>
                 </div>
             </div>
         </section>
