Update skills list and section headings in skills.html

--- a/skills.html
+++ b/skills.html
@@ -39,10 +39,12 @@
                     <ul class="ttp-items">
                         <li>Incident Response (IR)</li>
                         <li>Advanced Threat Hunting</li>
-                        <li>Malware Analysis/Classification</li>
-                        <li>Log Forensics</li>
-                        <li>Alert Triage</li>
-                        <li>Security Orchestration</li>
+                        <li>Malware Analysis</li>
+                        <li>Digital Forensics</li>
+                        <li>Log Analysis & Correlation</li>
+                        <li>Alert Triage & Investigation</li>
+                        <li>Security Orchestration (SOAR)</li>
+                        <li>IOC Detection & Tracking</li>
                     </ul>
                 </div>
 
@@ -51,57 +53,152 @@
                     <ul class="ttp-items">
                         <li>NYCRR Part 500</li>
                         <li>HIPAA Security Rule</li>
-                        <li>NIST CSF</li>
-                        <li>NIST 800-53</li>
-                        <li>Risk Management</li>
+                        <li>NIST Cybersecurity Framework</li>
+                        <li>NIST 800-53 Controls</li>
+                        <li>Risk Assessment & Management</li>
+                        <li>Policy Development</li>
+                        <li>Audit & Remediation</li>
                         <li>Executive Reporting</li>
                     </ul>
                 </div>
 
                 <div class="ttp-category">
-                    <h3>▸ Development</h3>
+                    <h3>▸ Programming</h3>
                     <ul class="ttp-items">
-                        <li>Python</li>
-                        <li>C++</li>
-                        <li>PowerShell</li>
-                        <li>Bash</li>
-                        <li>SQL</li>
-                        <li>JavaScript/React</li>
+                        <li>Python (Scripting & Automation)</li>
+                        <li>C++ (Systems Programming)</li>
+                        <li>PowerShell (Windows Automation)</li>
+                        <li>Bash (Linux Scripting)</li>
+                        <li>SQL (Database Queries)</li>
+                        <li>JavaScript (Full-Stack Dev)</li>
+                        <li>React (Frontend Framework)</li>
+                        <li>FastAPI (Backend Development)</li>
                     </ul>
                 </div>
 
                 <div class="ttp-category">
-                    <h3>▸ Security Tools</h3>
+                    <h3>▸ Penetration Testing</h3>
                     <ul class="ttp-items">
-                        <li>Wireshark</li>
-                        <li>Nmap</li>
-                        <li>Metasploit</li>
-                        <li>Burp Suite</li>
-                        <li>Nessus</li>
-                        <li>Kali Linux</li>
+                        <li>Network Scanning (Nmap)</li>
+                        <li>Vulnerability Assessment</li>
+                        <li>Metasploit Framework</li>
+                        <li>Web Application Testing</li>
+                        <li>Burp Suite Professional</li>
+                        <li>Exploitation Techniques</li>
+                        <li>Privilege Escalation</li>
+                        <li>Post-Exploitation</li>
                     </ul>
                 </div>
 
                 <div class="ttp-category">
-                    <h3>▸ Enterprise Platforms</h3>
+                    <h3>▸ Network Security</h3>
                     <ul class="ttp-items">
-                        <li>Microsoft Defender</li>
+                        <li>Packet Analysis (Wireshark)</li>
+                        <li>Network Protocol Analysis</li>
+                        <li>Firewall Configuration</li>
+                        <li>IDS/IPS Management</li>
+                        <li>VPN Configuration</li>
+                        <li>Network Segmentation</li>
+                        <li>Traffic Monitoring</li>
+                        <li>Anomaly Detection</li>
+                    </ul>
+                </div>
+
+                <div class="ttp-category">
+                    <h3>▸ Cloud & Infrastructure</h3>
+                    <ul class="ttp-items">
+                        <li>Microsoft Azure</li>
                         <li>Entra ID (Azure AD)</li>
-                        <li>Intune</li>
+                        <li>Microsoft Defender Suite</li>
+                        <li>Intune (MDM/MAM)</li>
                         <li>Active Directory</li>
-                        <li>ServiceNow</li>
-                        <li>SIEM</li>
+                        <li>Cloud Security Posture</li>
+                        <li>Identity & Access Management</li>
+                        <li>Zero Trust Architecture</li>
                     </ul>
                 </div>
 
                 <div class="ttp-category">
-                    <h3>▸ OSINT/Recon</h3>
+                    <h3>▸ OSINT/Reconnaissance</h3>
                     <ul class="ttp-items">
-                        <li>Shodan</li>
-                        <li>Censys</li>
-                        <li>VirusTotal</li>
-                        <li>Passive Reconnaissance</li>
-                        <li>Threat Intelligence</li>
+                        <li>Shodan (Asset Discovery)</li>
+                        <li>Censys (Internet Scanning)</li>
+                        <li>VirusTotal (Threat Intel)</li>
+                        <li>Passive DNS Analysis</li>
+                        <li>WHOIS & Domain Intel</li>
+                        <li>Social Media Intelligence</li>
+                        <li>Data Breach Analysis</li>
+                        <li>Threat Actor Profiling</li>
+                    </ul>
+                </div>
+
+                <div class="ttp-category">
+                    <h3>▸ Security Platforms</h3>
+                    <ul class="ttp-items">
+                        <li>SIEM (Splunk, Sentinel)</li>
+                        <li>EDR/XDR Solutions</li>
+                        <li>Nessus (Vuln Scanning)</li>
+                        <li>OpenVAS (Open Source Scanning)</li>
+                        <li>ServiceNow (ITSM/GRC)</li>
+                        <li>Kali Linux (Pentesting OS)</li>
+                        <li>Security Automation Tools</li>
+                        <li>Threat Intelligence Platforms</li>
+                    </ul>
+                </div>
+
+                <div class="ttp-category">
+                    <h3>▸ Vulnerability Management</h3>
+                    <ul class="ttp-items">
+                        <li>Vulnerability Scanning</li>
+                        <li>CVE Analysis & Research</li>
+                        <li>Patch Management</li>
+                        <li>Risk Prioritization</li>
+                        <li>Remediation Planning</li>
+                        <li>Security Testing</li>
+                        <li>Exploit Validation</li>
+                        <li>Compliance Validation</li>
+                    </ul>
+                </div>
+
+                <div class="ttp-category">
+                    <h3>▸ Security Operations</h3>
+                    <ul class="ttp-items">
+                        <li>24/7 Security Monitoring</li>
+                        <li>Playbook Development</li>
+                        <li>Incident Documentation</li>
+                        <li>Root Cause Analysis</li>
+                        <li>Security Metrics & KPIs</li>
+                        <li>Team Collaboration</li>
+                        <li>Escalation Procedures</li>
+                        <li>Continuous Improvement</li>
+                    </ul>
+                </div>
+
+                <div class="ttp-category">
+                    <h3>▸ Threat Intelligence</h3>
+                    <ul class="ttp-items">
+                        <li>IOC Collection & Analysis</li>
+                        <li>Threat Feed Aggregation</li>
+                        <li>MITRE ATT&CK Framework</li>
+                        <li>Malware Signature Analysis</li>
+                        <li>Threat Actor Tracking</li>
+                        <li>Campaign Analysis</li>
+                        <li>Intelligence Reporting</li>
+                        <li>Proactive Defense</li>
+                    </ul>
+                </div>
+
+                <div class="ttp-category">
+                    <h3>▸ Security Awareness</h3>
+                    <ul class="ttp-items">
+                        <li>Phishing Simulation</li>
+                        <li>Training Program Development</li>
+                        <li>Security Policy Education</li>
+                        <li>Social Engineering Defense</li>
+                        <li>Incident Reporting Training</li>
+                        <li>Metrics & Measurement</li>
+                        <li>Executive Communication</li>
+                        <li>Culture Building</li>
                     </ul>
                 </div>
             </div>
