--- a/skills.html
+++ b/skills.html
@@ -29,7 +29,7 @@
     <div class="container">
         <div class="page-header">
             <h1>TECHNICAL ARSENAL</h1>
-            <p>Tools, frameworks, and capabilities I work with</p>
+            <p>TOOLS, FRAMEWORKS, AND CAPABILITIES</p>
         </div>
 
         <section class="section">
