--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Samuel Frieman | Cybersecurity Analyst</title>
-    <meta name="description" content="Samuel Frieman - Cybersecurity professional specializing in SOC operations, threat hunting, and incident response">
+    <meta name="description" content="Samuel Frieman - Cybersecurity professional specializing in open source intelligence, threat hunting, and incident response">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;700&family=Orbitron:wght@400;700;900&display=swap" rel="stylesheet">
@@ -60,16 +60,16 @@
             <div class="hero-content">
                 <div class="hero-text">
                     <h1>SAMUEL FRIEMAN</h1>
-                    <div class="title">CYBERSECURITY ANALYST | THREAT HUNTER | SOC OPERATIONS</div>
+                    <div class="title">THREAT HUNTER | OSINT EXPERT | RISK MITIGATOR</div>
                     <p class="bio">
                         Defending digital infrastructure against sophisticated threats through threat hunting, 
                         security automation, and enterprise defense architecture.
                     </p>
                     <div class="contact-links">
                         <a href="mailto:Samuel.frieman@spartans.ut.edu">📧 EMAIL</a>
-                        <a href="https://linkedin.com/in/samuel-frieman" target="_blank">💼 LINKEDIN</a>
+                        <a href="https://www.linkedin.com/in/samuel-frieman-829857275/" target="_blank">💼 LINKEDIN</a>
                         <a href="https://github.com/SamFrieman" target="_blank">💻 GITHUB</a>
-                        <a href="tel:+18566736308">📞 CALL</a>
+                        <a href="tel:+1856-673-6308">📞 CALL</a>
                     </div>
                 </div>
 
