--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         </div>
                         <div class="stat-row">
                             <span class="stat-label">Automation Time Saved</span>
-                            <span class="stat-value low">5hrs/week</span>
+                            <span class="stat-value low">10hrs/week</span>
                         </div>
                     </div>
                 </div>
@@ -119,7 +119,7 @@
                 <a href="skills.html" class="quick-link-card">
                     <div class="quick-link-icon">⚡</div>
                     <div class="quick-link-title">TECHNICAL SKILLS</div>
-                    <div class="quick-link-desc">SOC operations, GRC frameworks, development stack, and security tools</div>
+                    <div class="quick-link-desc">Open source intelligence, GRC frameworks, development stack, and security tools</div>
                 </a>
 
                 <a href="about.html" class="quick-link-card">
@@ -153,8 +153,9 @@
                     <div class="highlight-label">RECENT PROJECT</div>
                     <div class="highlight-title">Core Recon Platform</div>
                     <div class="highlight-text">
-                        Built a passive reconnaissance platform aggregating 5 threat feeds with 95% accuracy, 
-                        tracking 500+ malicious IOCs in SIEM lab environment.
+                            Engineered full-stack reconnaissance web app using FastAPI and React with 8 passive intelligence 
+                            modules (DNS, SSL/TLS, WHOIS, subdomains), automated PDF reporting with risk scoring, SQLite 
+                            persistence, and XSS/SQL injection input sanitization. 
                     </div>
                     <a href="projects.html" class="highlight-link">View Project →</a>
                 </div>
@@ -177,9 +178,9 @@
         <div class="footer-content">
             <div class="footer-links">
                 <a href="mailto:Samuel.frieman@spartans.ut.edu">Email</a>
-                <a href="https://linkedin.com/in/samuel-frieman" target="_blank">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/samuel-frieman-829857275/" target="_blank">LinkedIn</a>
                 <a href="https://github.com/SamFrieman" target="_blank">GitHub</a>
-                <a href="tel:+18566736308">Phone: (856) 673-6308</a>
+                <a href="tel:+1856-673-6308">Phone: (856) 673-6308</a>
             </div>
             <div class="copyright">
                 © 2026 Samuel Frieman | Cybersecurity Professional
