--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
                     <span>SYSTEM ONLINE</span>
                 </div>
                 <div class="status-item">
+                    <span>SECURITY POSTURE: HIGH</span>
+                </div>
+                <div class="status-item">
                     <span>THREAT LEVEL: LOW</span>
                 </div>
                 <div class="status-item">
