--- a/work.html
+++ b/work.html
@@ -46,9 +46,9 @@
                     
                     <div class="story-highlight">
                         I leveraged OSINT platforms like Shodan, Censys, and VirusTotal to map out each target's 
-                        attack surface. One memorable find: a target company had exposed administrative panels with 
-                        default credentials still active. That single discovery likely saved millions in potential 
-                        breach costs.
+                        attack surface. Additionally, I performed daily analysis of client web applications, scrutinizing
+                        their security posture through automated vulnerability scans and manual code reviews to identify \
+                        potential weaknesses before they could be exploited.
                     </div>
 
                     Beyond reconnaissance, I performed comprehensive vulnerability assessments, uncovering over 40 
@@ -69,19 +69,19 @@
                 </div>
                 <div class="story-title">Building Defense Infrastructure</div>
                 <div class="story-content">
-                    Analyzing security controls is one thing. Actually implementing them across an enterprise 
-                    is where theory meets reality. I deployed Microsoft's entire security stack—Entra ID, 
-                    Defender, and Intune—from the ground up.
+                    Analyzing security controls is one thing. Actually assisted implementing them across an enterprise 
+                    is where theory meets reality. I helped deploy Microsoft's security stack—Entra ID, 
+                    Defender, and Intune.
 
                     <div class="story-highlight">
                         The challenge wasn't just technical configuration. It was understanding how 300+ 
                         NIST 800-53 controls map to real-world security outcomes. I analyzed the entire framework, 
-                        identified 12 critical gaps, and developed a comprehensive remediation roadmap that 
-                        improved security posture by 35%.
+                        identified identified controls we lacked, and developed a comprehensive remediation roadmap that 
+                        theoretically improved security posture by 35%.
                     </div>
 
-                    This wasn't textbook compliance work—it was about genuinely making the organization more 
-                    resilient against actual threats while maintaining operational efficiency.
+                    This wasn't textbook compliance work, rather it was about genuinely making the organization 
+                    more resilient against actual threats while maintaining operational efficiency.
                 </div>
                 <div class="story-tags">
                     <span class="tag">MICROSOFT SECURITY</span>
@@ -98,8 +98,8 @@
                 <div class="story-title">Automating SOC Workflows</div>
                 <div class="story-content">
                     At Windward Consulting, I quickly realized that analysts spend enormous amounts of time 
-                    on repetitive tasks that could be automated. While reviewing and categorizing 100+ security 
-                    alerts each week taught me the team's threat taxonomy, I knew there had to be a better way.
+                    on repetitive tasks that could be automated. While reviewing and categorizing 100+ data
+                    each week taught me the team's threat taxonomy, I knew there had to be a better way.
 
                     <div class="story-highlight">
                         I built Python and PowerShell automation scripts that transformed hours of manual CSV 
@@ -107,8 +107,8 @@
                         per week that could be redirected toward actual threat analysis.
                     </div>
 
-                    I also conducted a comprehensive evaluation of Nessus and OpenVAS vulnerability platforms 
-                    across 40+ scanning techniques to help the team choose the right tool for enterprise adoption.
+                    I also conducted a comprehensive evaluation of Nessus and OpenVAS vulnerability platforms across 40+ 
+                    scanning techniques to report to the team to help choose the right tool for enterprise adoption.
                 </div>
                 <div class="story-tags">
                     <span class="tag">AUTOMATION</span>
