--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
     <div class="container">
         <div class="page-header">
             <h1>PROJECTS</h1>
-            <p>Building tools that solve real security problems</p>
+            <p>BUILDING TOOLS THAT SOLVE REAL SECURITY PROBLEMS</p>
         </div>
 
         <section class="section">
@@ -73,33 +73,15 @@
                     across PowerShell execution, system enumeration, and obfuscation utilities. Implemented defense-in-depth 
                     security with client-side rate limiting and XSS pattern blocking—fully offline with <100ms processing latency.
                 </p>
+                <a href="https://github.com/SamFrieman/bakery-encoder-decoder" target="_blank" class="project-link">
+                    <span>→</span> VIEW ON GITHUB
+                </a>
                 <div class="story-tags">
                     <span class="tag">CRYPTOGRAPHY</span>
                     <span class="tag">THREAT DETECTION</span>
                     <span class="tag">50+ CIPHERS</span>
                     <span class="tag">MALWARE ANALYSIS</span>
                     <span class="tag">OFFLINE CAPABLE</span>
-                </div>
-            </div>
-
-            <div class="project-showcase">
-                <h3>Company Research Tool: Automated Intelligence Platform</h3>
-                <div class="project-tech-stack">React • Claude API • Web Search</div>
-                <p class="project-description">
-                    Automated company intelligence platform leveraging Claude Sonnet 4 API with integrated web search to 
-                    aggregate information across 6 research categories: company overview, recent news/deals, financial 
-                    performance, leadership team, products/services, and partnerships/M&A.
-                    <br><br>
-                    Implemented sequential API orchestration executing targeted search queries with category-specific keywords, 
-                    processing responses while maintaining source attribution. Built intelligent report compilation system with 
-                    structured 8-section format including executive summary, inline citations, and comprehensive source bibliography. 
-                    Features real-time progress indicators and text-based export for offline archival.
-                </p>
-                <div class="story-tags">
-                    <span class="tag">AI INTEGRATION</span>
-                    <span class="tag">WEB SEARCH</span>
-                    <span class="tag">THREAT INTEL</span>
-                    <span class="tag">REPORT GENERATION</span>
                 </div>
             </div>
 
@@ -126,32 +108,27 @@
             </div>
 
             <div class="project-showcase">
-                <h3>Threat Intelligence Aggregation System</h3>
-                <div class="project-tech-stack">Python • FastAPI</div>
+                <h3>C2 Beacon Detector: Browser-Based Threat Hunting</h3>
+                <div class="project-tech-stack">JavaScript • Machine Learning • Threat Intelligence</div>
                 <p class="project-description">
-                    Developed an automated Python script that aggregates 5 distinct threat feed sources to produce 
-                    daily threat briefings with a 95% accuracy rate. Integrated the briefing system into a SIEM lab 
-                    environment, tracking over 500 malicious indicators of compromise.
+                    The C2 Beacon Detector is a professional-grade, client-side tool that identifies Command & Control (C2) activity 
+                    through behavioral patterns and machine learning. Built entirely in JavaScript, it performs local, privacy-focused 
+                    analysis of network traffic—examining timing intervals, jitter, and payload consistency—while cross-referencing 
+                    findings against the ThreatFox API and known framework signatures like Cobalt Strike.
+                    <br><br>
+                    The engine delivers high-fidelity threat scoring and maps detections directly to MITRE ATT&CK techniques. 
+                    Designed for incident responders and threat hunters, it generates actionable reports in HTML, PDF, and JSON 
+                    formats without requiring a backend. This ensures a secure, browser-based workflow for detecting sophisticated 
+                    anomalies and malicious beaconing in real-time.
                 </p>
+                <a href="https://github.com/SamFrieman/c2-beacon-detector" target="_blank" class="project-link">
+                    <span>→</span> VIEW ON GITHUB
+                </a>
                 <div class="story-tags">
-                    <span class="tag">THREAT INTEL</span>
-                    <span class="tag">SIEM</span>
-                    <span class="tag">IOC TRACKING</span>
-                </div>
-            </div>
-
-            <div class="project-showcase">
-                <h3>GRC Risk Assessment & Compliance Mapping</h3>
-                <div class="project-tech-stack">University Coursework</div>
-                <p class="project-description">
-                    Led 4-person team conducting enterprise risk assessment against NIST CSF, identifying control gaps 
-                    and presenting remediation roadmap to stakeholders. This project showcased the ability to 
-                    communicate complex security concepts to non-technical audiences and attention to regulatory details.
-                </p>
-                <div class="story-tags">
-                    <span class="tag">GRC</span>
-                    <span class="tag">NIST CSF</span>
-                    <span class="tag">RISK ASSESSMENT</span>
+                    <span class="tag">JAVASCRIPT</span>
+                    <span class="tag">THREAT HUNTING</span>
+                    <span class="tag">MITRE ATT&CK</span>
+                    <span class="tag">SOC AUTOMATION</span>
                 </div>
             </div>
         </section>
