--- a/work.html
+++ b/work.html
@@ -47,7 +47,7 @@
                     <div class="story-highlight">
                         I leveraged OSINT platforms like Shodan, Censys, and VirusTotal to map out each target's 
                         attack surface. Additionally, I performed daily analysis of client web applications, scrutinizing
-                        their security posture through automated vulnerability scans and manual code reviews to identify \
+                        their security posture through automated vulnerability scans and manual code reviews to identify
                         potential weaknesses before they could be exploited.
                     </div>
 
