--- a/work.html
+++ b/work.html
@@ -29,7 +29,7 @@
     <div class="container">
         <div class="page-header">
             <h1>WORK EXPERIENCE</h1>
-            <p>Stories from the field</p>
+            <p>STORIES FROM THE FIELD</p>
         </div>
 
         <section class="section">
