--- a/error-pages/403.html
+++ b/error-pages/403.html
@@ -1,1 +1,129 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>403 - Access Denied | Samuel Frieman</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;700&family=Orbitron:wght@400;700;900&display=swap" rel="stylesheet">
+    <style>
+        :root {
+            --bg-primary: #0B0C10;
+            --bg-secondary: #1F2833;
+            --text-primary: #C5C6C7;
+            --accent-cyan: #66FCF1;
+            --accent-red: #FF3E3E;
+        }
 
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'JetBrains Mono', monospace;
+            background: var(--bg-primary);
+            color: var(--text-primary);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            padding: 2rem;
+        }
+
+        .error-container {
+            background: var(--bg-secondary);
+            border: 2px solid var(--accent-red);
+            border-radius: 8px;
+            padding: 3rem;
+            max-width: 600px;
+            text-align: center;
+            box-shadow: 0 0 30px rgba(255, 62, 62, 0.3);
+        }
+
+        .error-code {
+            font-family: 'Orbitron', sans-serif;
+            font-size: 6rem;
+            color: var(--accent-red);
+            font-weight: 900;
+            margin-bottom: 1rem;
+            text-shadow: 0 0 20px rgba(255, 62, 62, 0.5);
+        }
+
+        .error-title {
+            font-family: 'Orbitron', sans-serif;
+            font-size: 2rem;
+            color: var(--accent-red);
+            margin-bottom: 1rem;
+        }
+
+        .error-message {
+            font-size: 1.1rem;
+            line-height: 1.6;
+            margin-bottom: 2rem;
+            opacity: 0.9;
+        }
+
+        .error-buttons {
+            display: flex;
+            gap: 1rem;
+            justify-content: center;
+            flex-wrap: wrap;
+        }
+
+        .btn {
+            padding: 0.75rem 1.5rem;
+            background: transparent;
+            border: 2px solid var(--accent-cyan);
+            color: var(--accent-cyan);
+            text-decoration: none;
+            border-radius: 4px;
+            font-weight: 500;
+            transition: all 0.3s ease;
+            font-family: 'JetBrains Mono', monospace;
+        }
+
+        .btn:hover {
+            background: var(--accent-cyan);
+            color: var(--bg-primary);
+            box-shadow: 0 0 20px rgba(102, 252, 241, 0.6);
+            transform: translateY(-2px);
+        }
+
+        .security-note {
+            margin-top: 2rem;
+            padding-top: 2rem;
+            border-top: 1px solid rgba(255, 62, 62, 0.2);
+            font-size: 0.85rem;
+            opacity: 0.7;
+        }
+
+        .icon {
+            font-size: 3rem;
+            margin-bottom: 1rem;
+        }
+    </style>
+</head>
+<body>
+    <div class="error-container">
+        <div class="icon">🚫</div>
+        <div class="error-code">403</div>
+        <h1 class="error-title">ACCESS DENIED</h1>
+        <p class="error-message">
+            You don't have permission to access this resource. This may be due to:<br><br>
+            • Attempting to access a protected directory<br>
+            • Malicious request patterns detected<br>
+            • Security policy violation
+        </p>
+        <div class="error-buttons">
+            <a href="/" class="btn">← BACK TO HOME</a>
+        </div>
+        <div class="security-note">
+            This incident has been logged.<br>
+            If you believe this is an error, contact: Samuel.frieman@spartans.ut.edu
+        </div>
+    </div>
+</body>
+</html>
