--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                     </p>
                     <div class="contact-links">
                         <a href="mailto:Samuel.frieman@spartans.ut.edu">📧 EMAIL</a>
-                        <a href="https://www.linkedin.com/in/samuel-frieman-829857275/" target="_blank">💼 LINKEDIN</a>
-                        <a href="https://github.com/SamFrieman" target="_blank">💻 GITHUB</a>
+                        <a href="https://www.linkedin.com/in/samuel-frieman-829857275/" target="_blank" rel="noopener noreferrer">💼 LINKEDIN</a>
+                        <a href="https://github.com/SamFrieman" target="_blank" rel="noopener noreferrer">💻 GITHUB</a>
                         <a href="tel:+1856-673-6308">📞 CALL</a>
                     </div>
                 </div>
@@ -181,8 +181,8 @@
         <div class="footer-content">
             <div class="footer-links">
                 <a href="mailto:Samuel.frieman@spartans.ut.edu">Email</a>
-                <a href="https://www.linkedin.com/in/samuel-frieman-829857275/" target="_blank">LinkedIn</a>
-                <a href="https://github.com/SamFrieman" target="_blank">GitHub</a>
+                <a href="https://www.linkedin.com/in/samuel-frieman-829857275/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+                <a href="https://github.com/SamFrieman" target="_blank" rel="noopener noreferrer">GitHub</a>
                 <a href="tel:+1856-673-6308">Phone: (856) 673-6308</a>
             </div>
             <div class="copyright">
@@ -191,6 +191,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script-secure.js"></script>
 </body>
 </html>
