--- a/work.html
+++ b/work.html
@@ -149,8 +149,8 @@
         <div class="footer-content">
             <div class="footer-links">
                 <a href="mailto:Samuel.frieman@spartans.ut.edu">Email</a>
-                <a href="https://linkedin.com/in/samuel-frieman" target="_blank">LinkedIn</a>
-                <a href="https://github.com/SamFrieman" target="_blank">GitHub</a>
+                <a href="https://linkedin.com/in/samuel-frieman" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+                <a href="https://github.com/SamFrieman" target="_blank" rel="noopener noreferrer">GitHub</a>
                 <a href="tel:+18566736308">Phone: (856) 673-6308</a>
             </div>
             <div class="copyright">
@@ -159,6 +159,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script-secure.js"></script>
 </body>
 </html>
