--- a/projects.html
+++ b/projects.html
@@ -48,7 +48,7 @@
                     features expandable intelligence cards, real-time validation, and dynamic risk visualizations using 
                     SVG animations—generating detailed multi-page reports in under 30 seconds.
                 </p>
-                <a href="https://github.com/SamFrieman/core-recon-passive-reconnaissance" target="_blank" class="project-link">
+                <a href="https://github.com/SamFrieman/core-recon-passive-reconnaissance" target="_blank" rel="noopener noreferrer" class="project-link">
                     <span>→</span> VIEW ON GITHUB
                 </a>
                 <div class="story-tags">
@@ -73,7 +73,7 @@
                     across PowerShell execution, system enumeration, and obfuscation utilities. Implemented defense-in-depth 
                     security with client-side rate limiting and XSS pattern blocking—fully offline with <100ms processing latency.
                 </p>
-                <a href="https://github.com/SamFrieman/bakery-encoder-decoder" target="_blank" class="project-link">
+                <a href="https://github.com/SamFrieman/bakery-encoder-decoder" target="_blank" rel="noopener noreferrer" class="project-link">
                     <span>→</span> VIEW ON GITHUB
                 </a>
                 <div class="story-tags">
@@ -97,7 +97,7 @@
                     simple: let the machines handle the mechanical parts so analysts can focus on investigations that 
                     actually require human expertise.
                 </p>
-                <a href="https://github.com/SamFrieman/soc-automation-platform" target="_blank" class="project-link">
+                <a href="https://github.com/SamFrieman/soc-automation-platform" target="_blank" rel="noopener noreferrer" class="project-link">
                     <span>→</span> VIEW ON GITHUB
                 </a>
                 <div class="story-tags">
@@ -121,7 +121,7 @@
                     formats without requiring a backend. This ensures a secure, browser-based workflow for detecting sophisticated 
                     anomalies and malicious beaconing in real-time.
                 </p>
-                <a href="https://github.com/SamFrieman/c2-beacon-detector" target="_blank" class="project-link">
+                <a href="https://github.com/SamFrieman/c2-beacon-detector" target="_blank" rel="noopener noreferrer" class="project-link">
                     <span>→</span> VIEW ON GITHUB
                 </a>
                 <div class="story-tags">
@@ -138,8 +138,8 @@
         <div class="footer-content">
             <div class="footer-links">
                 <a href="mailto:Samuel.frieman@spartans.ut.edu">Email</a>
-                <a href="https://linkedin.com/in/samuel-frieman" target="_blank">LinkedIn</a>
-                <a href="https://github.com/SamFrieman" target="_blank">GitHub</a>
+                <a href="https://linkedin.com/in/samuel-frieman" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+                <a href="https://github.com/SamFrieman" target="_blank" rel="noopener noreferrer">GitHub</a>
                 <a href="tel:+18566736308">Phone: (856) 673-6308</a>
             </div>
             <div class="copyright">
@@ -148,6 +148,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script-secure.js"></script>
 </body>
 </html>
