--- a/about.html
+++ b/about.html
@@ -129,8 +129,17 @@
                 <div class="achievement-card">
                     <div class="achievement-title">Swimmer CTF</div>
                     <div class="achievement-detail">Internatial japanese geo-location based Capture The Flag</div>
-                    <div class="achievement-badge">>128th/688th</div>
+                    <div class="achievement-badge">128th/688th</div>
                     <div class="achievement-badge">TOP 20%</div>
+                </div>
+
+                <div class="achievement-card">
+                    <div class="achievement-title">Gasparilla CTF</div>
+                    <div class="achievement-detail">Local University of Tampa CTF</div>
+                    <div class="achievement-badge">5th</div>
+                    <div class="achievement-badge">SQL</div>
+                    <div class="achievement-badge">OSINT</div>
+                    <div class="achievement-badge">Forensics</div>
                 </div>
 
                 <div class="achievement-card">
