--- a/projects.html
+++ b/projects.html
@@ -102,8 +102,9 @@
                 </a>
                 <div class="story-tags">
                     <span class="tag">Python</span>
-                    <span class="tag">SOC AUTOMATION</span>
-                    <span class="tag">INCIDENT RESPONSE</span>
+                    <span class="tag">SOC PLATFORM</span>
+                    <span class="tag">OWASP TOP 10</span>
+                    <span class="tag">MITRE ATT&CK FRAMEWORK</span>
                 </div>
             </div>
 
@@ -140,7 +141,6 @@
                 <a href="mailto:Samuel.frieman@spartans.ut.edu">Email</a>
                 <a href="https://linkedin.com/in/samuel-frieman" target="_blank" rel="noopener noreferrer">LinkedIn</a>
                 <a href="https://github.com/SamFrieman" target="_blank" rel="noopener noreferrer">GitHub</a>
-                <a href="tel:+18566736308">Phone: (856) 673-6308</a>
             </div>
             <div class="copyright">
                 © 2026 Samuel Frieman | Cybersecurity Professional
