--- a/projects.html
+++ b/projects.html
@@ -79,7 +79,7 @@
                 <div class="story-tags">
                     <span class="tag">CRYPTOGRAPHY</span>
                     <span class="tag">THREAT DETECTION</span>
-                    <span class="tag">50+ CIPHERS</span>
+                    <span class="tag">100+ CIPHERS</span>
                     <span class="tag">MALWARE ANALYSIS</span>
                     <span class="tag">OFFLINE CAPABLE</span>
                 </div>
@@ -105,6 +105,7 @@
                     <span class="tag">SOC PLATFORM</span>
                     <span class="tag">OWASP TOP 10</span>
                     <span class="tag">MITRE ATT&CK FRAMEWORK</span>
+                    <span class="tag">DEMO COMING SOON</span>
                 </div>
             </div>
 
@@ -128,7 +129,7 @@
                 <div class="story-tags">
                     <span class="tag">JAVASCRIPT</span>
                     <span class="tag">THREAT HUNTING</span>
-                    <span class="tag">MITRE ATT&CK</span>
+                    <span class="tag">INCIDENT REPONSE</span>
                     <span class="tag">SOC AUTOMATION</span>
                 </div>
             </div>
