--- a/index.html
+++ b/index.html
@@ -73,27 +73,31 @@
                 </div>
 
                 <div class="threat-meter">
-                    <h3>▸ IMPACT METRICS</h3>
+                    <h3>▸ CORE SKILLS</h3>
                     <div class="meter-stats">
                         <div class="stat-row">
-                            <span class="stat-label">Security Posture Improvement</span>
-                            <span class="stat-value low">+35%</span>
+                            <span class="stat-label">OSINT & Reconnaissance</span>
+                            <span class="stat-value low">Shodan, Censys, Maltego</span>
                         </div>
                         <div class="stat-row">
-                            <span class="stat-label">Phishing Incidents Reduced</span>
-                            <span class="stat-value low">-60%</span>
+                            <span class="stat-label">Vulnerability Assessment</span>
+                            <span class="stat-value low">Nessus, Burp Suite, Metasploit</span>
                         </div>
                         <div class="stat-row">
-                            <span class="stat-label">Controls Analyzed</span>
-                            <span class="stat-value medium">300+</span>
+                            <span class="stat-label">Threat Hunting & Analysis</span>
+                            <span class="stat-value low">Splunk, Wireshark, YARA</span>
                         </div>
                         <div class="stat-row">
-                            <span class="stat-label">Vulnerabilities Discovered</span>
-                            <span class="stat-value high">40+</span>
+                            <span class="stat-label">Security Automation</span>
+                            <span class="stat-value low">Python, PowerShell, FastAPI</span>
                         </div>
                         <div class="stat-row">
-                            <span class="stat-label">Automation Time Saved</span>
-                            <span class="stat-value low">10hrs/week</span>
+                            <span class="stat-label">Cloud Security</span>
+                            <span class="stat-value low">Azure, Entra ID, Defender</span>
+                        </div>
+                        <div class="stat-row">
+                            <span class="stat-label">GRC & Compliance</span>
+                            <span class="stat-value low">NIST 800-53, HIPAA, ServiceNow</span>
                         </div>
                     </div>
                 </div>
